prometheus/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: "grafana.familym.ru"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
  - host: "prometheus.familym.ru"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
  - host: "alertmanager.familym.ru"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alertmanager-operated
            port:
              number: 9093    
  - host: "node-exporter.familym.ru"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-prometheus-node-exporter
            port:
              number: 9100
